barra de busqueda

--- a/blog-musica/bootstrap/index.html
+++ b/blog-musica/bootstrap/index.html
@@ -139,7 +139,30 @@
 			</div>
           </article>
 		<!--fin contenido-->
-		</div>
+<!--        barra lateral-->
+		 <aside class="col-md-4 active bg-secondary">
+           <div class="container border border-dark rounded">
+             <div class="row">
+<!--				 barra de busqueda-->
+               <div class="col-12 ">
+				   <div class="input-group input-group-lg">
+					  <span class="input-group-btn">
+						  <button class="btn btn-danger" type="button">
+							  <svg height="20" width="20" viewBox="0 0 100 100">
+								<image class="img-fluid" xlink:href="icons/svgs/fi-magnifying-glass.svg"/>
+							  </svg>
+						  </button>
+					  </span>
+					  <input class="form-control " type="search" placeholder="Search" aria-label="Search">
+					</div>
+                </div>
+<!--				 fin barra de busqueda-->
+               <div class="col-12"></div>
+               </div>
+           </div>
+		 </aside>
+<!--		  fin barra lateral-->
+	  </div>
 		
 		
 	</div>
