agrego lista de opciones

--- a/blog-musica/bootstrap/index.html
+++ b/blog-musica/bootstrap/index.html
@@ -140,8 +140,8 @@
           </article>
 		<!--fin contenido-->
 <!--        barra lateral-->
-		 <aside class="col-md-4 active bg-secondary">
-           <div class="container border border-dark rounded">
+		 <aside class="col-md-4 active bg-secondary d-none d-md-block">
+           <div class="container">
              <div class="row">
 <!--				 barra de busqueda-->
                <div class="col-12 ">
@@ -157,7 +157,38 @@
 					</div>
                 </div>
 <!--				 fin barra de busqueda-->
-               <div class="col-12"></div>
+               <div class="col-12 mt-3">
+				   <div class="list-group text-left">
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Vestibulum at eros</a>
+					  <a href="#" class="list-group-item list-group-item-action ">Cras justo odio</a>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+				   </div>
+			   </div>
                </div>
            </div>
 		 </aside>
