barras laterales izquierdas

--- a/blog-gastronomia/foundation/index.html
+++ b/blog-gastronomia/foundation/index.html
@@ -17,7 +17,7 @@
 		<div class="column small-12 show-for-medium">
 		  <div class="row">
 		    <div class="column small-4 ">
-		      <div class="row" style="border-right: hsla(0,0%,81%,1.00) solid 1px; margin-top: 1rem">
+		      <div class="row mt1" style="border-right: hsla(0,0%,81%,1.00) solid 1px;">
 		        <div class="small-12 column text-left ">
 		          <h3 class="subheader titulo">Arte En La Cocina</h3>
 		          </div>
@@ -36,6 +36,28 @@
 <!--	fin encabezado	-->
 		
 		
+	</div>
+	<div class="row">
+<!--		columna izqierda-->
+		<div class="column small-4 mt1">
+			<div class="input-group alert">		  
+			  <input class="input-group-field" type="search">
+			  <div class="input-group-button">
+				<span class="input-group-label fi-magnifying-glass" style="background:hsla(0,92%,46%,0.67)"></span>
+			  </div>
+			</div>
+			<ul class="vertical menu">
+			  <li><a href="#">Platos Exoticos</a></li>
+			  <li><a href="#">Platos tipicos </a></li>
+			  <li><a href="#">Ensaladas</a></li>
+			</ul>
+		</div>
+		
+<!--		fin columna izquierda-->
+<!--		columna derecha-->
+		<div class="column small-8">
+		</div>
+<!--		fin columna derecha-->
 	</div>
 	
 	
