lugar de visita

--- a/blog-turismo/materialize/index.html
+++ b/blog-turismo/materialize/index.html
@@ -93,12 +93,25 @@
 				   <div class="row"><img src="img/6.jpg" alt="" class="responsive-img z-depth-5"></div>
 				   <div class="row"><img src="img/7.jpg" alt="" class="responsive-img z-depth-5"></div>
 			   </div>
-			<div class="col s12 m8 #fafafa grey lighten-5">
-				<img src="img/5.jpg" alt="" class="responsive-img z-depth-5 logo" width="35%">
+		  <div class="col s12 m8 #fafafa grey lighten-5">
+		    <div class="row">
+				 <div class="col s12 m4"><img src="img/5.jpg" alt="" class="responsive-img z-depth-5 lugar" ></div>
+				 
+					 <div class="col s12 m8">
+						<h3 ><strong><em>Piedra del Peñol</em></strong></h3>
+					 	<div class="chip mt">05-12-2017<i class="material-icons">date_range</i> </div>
+					 	<div class="chip mt"> peñol-antioquia-colombia<em class="material-icons">location_on</em></div>
+					 	<p class="texto"> El municipio de Guatapé se localiza a 79 km. de la ciudad de Medellín en el oriente Antioqueño, destino turístico con sus atractivos: Peñón de Guatapé, mole de piedra con 220 m. De altura que para ascenderla se requiere superar más de 700 escalas; Embalse Peñol Guatapé, con 2.262 hectáreas de tierra inundadas para dar paso a una de las hidroeléctricas más  importantes del país; Grabados en los Zócalos de las fachadas de las residencias y demás edificaciones representando tradiciones y colorido. Viva esta experiencia con Turismo en Medellín. </p>
+				     </div>
+				 </div>
+			 </div>
+			<div class="col s12 m4">
 			</div>
+		  </div>
 			
-			</div>
-	
+			
+			
+			
 			  
 		
 	
