--- a/blog-turismo/materialize/index.html
+++ b/blog-turismo/materialize/index.html
@@ -54,48 +54,48 @@
 						  <a href="#"><image class="#" xlink:href="img/11.svg"/></a>
 					    </svg>
 					</div>
-				   	<div class="col s12">
+				   	<div class="col s12 ">
 						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="#"><image class="#" xlink:href="img/22.svg"/></a>
+						  <a href="#"><image class="" xlink:href="img/22.svg"/></a>
+					    </svg>
+					</div>
+				   	<div class="col s12 ">
+						<svg height="100" width="100" viewBox="0 0 100 100" class="">
+						  <a href="#"><image class="" xlink:href="img/33.svg"/></a>
 					    </svg>
 					</div>
 				   	<div class="col s12">
 						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="#"><image class="#" xlink:href="img/33.svg"/></a>
+						  <a href="#"><image class="" xlink:href="img/44.svg"/></a>
 					    </svg>
 					</div>
 				   	<div class="col s12">
 						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="#"><image class="#" xlink:href="img/44.svg"/></a>
+						  <a href="#"><image class="" xlink:href="img/55.svg"/></a>
 					    </svg>
 					</div>
 				   	<div class="col s12">
 						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="#"><image class="#" xlink:href="img/55.svg"/></a>
-					    </svg>
-					</div>
-				   	<div class="col s12">
-						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="#"><image class="#" xlink:href="img/66.svg"/></a>
+						  <a href="z-depth-5"><image class="" xlink:href="img/66.svg"/></a>
 					    </svg>
 					</div>
 				   </div>
 	           </div>
 			   <div class="col s12 m4">
-				   <div class="row"><img src="img/1.jpg" alt="" class="responsive-img z-depth-5"></div>
-				   <div class="row"><img src="img/2.jpg" alt="" class="responsive-img z-depth-5"></div>
+				   <div class="row"><img src="img/1.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
+				   <div class="row"><img src="img/2.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
 			   </div>
 			   <div class="col s12 m4">
-				   <div class="row"><img src="img/3.jpg" alt="" class="responsive-img z-depth-5"></div>
+				   <div class="row"><img src="img/3.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
 			   </div>
 			   <div class="col s12 m3">
-				   <div class="row"><img src="img/5.jpg" alt="" class="responsive-img z-depth-5"></div>
-				   <div class="row"><img src="img/6.jpg" alt="" class="responsive-img z-depth-5"></div>
-				   <div class="row"><img src="img/7.jpg" alt="" class="responsive-img z-depth-5"></div>
+				   <div class="row"><img src="img/5.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
+				   <div class="row"><img src="img/6.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
+				   <div class="row"><img src="img/7.jpg" alt="" class="responsive-img z-depth-5 materialboxed"></div>
 			   </div>
 		  <div class="col s12 m8 #fafafa grey lighten-5">
 		    <div class="row">
-				 <div class="col s12 m4"><img src="img/5.jpg" alt="" class="responsive-img z-depth-5 lugar" ></div>
+				 <div class="col s12 m4"><img src="img/5.jpg" alt="" class="responsive-img z-depth-5 lugar materialboxed" ></div>
 				 
 					 <div class="col s12 m8">
 						<h3 ><strong><em>Piedra del Peñol</em></strong></h3>
