--- a/blog-turismo/materialize/index.html
+++ b/blog-turismo/materialize/index.html
@@ -27,16 +27,16 @@
 				  <div class="col s7 m10 ">
                     <div class="row hide-on-small-on">
                       <div class="col s12 m6 l3 truncate">
-						  <a class="#1565c0 blue darken-3 btn-large peque truncate waves-orange"><i class="material-icons">cloud</i> Inicio</a>
+						  <a class="#1565c0 blue darken-3 btn-large peque truncate waves-effect waves-light"><i class="material-icons">cloud</i> Inicio</a>
 					  </div>
                       <div class="col s12 m6 l3 truncate "> 
-						  <a class="#1565c0 blue darken-3 btn-large peque truncate"><i class="material-icons">landscape</i> Estuve EN.. </a>
+						  <a class="#1565c0 blue darken-3 btn-large peque truncate waves-effect waves-light"><i class="material-icons">landscape</i> Estuve EN.. </a>
 					  </div>
                       <div class="col s12 m6 l3 truncate">
-						  <a class="#1565c0 blue darken-3 btn-large peque truncate"><i class="material-icons">star_border</i> Mejores Viajes </a>
+						  <a class="#1565c0 blue darken-3 btn-large peque truncate waves-effect waves-light"><i class="material-icons">star_border</i> Mejores Viajes </a>
 					  </div>
                       <div class="col s12 m6 l3 truncate">
-						  <a class="#1565c0 blue darken-3 btn-large peque truncate"> <i class="material-icons">list</i> Recomendados</a>
+						  <a class="#1565c0 blue darken-3 btn-large peque truncate waves-effect waves-light"> <i class="material-icons">list</i> Recomendados</a>
 					  </div>
                       <div class="col s12 hide-on-small-only">
                         <p class="flow-text white-text left-align"><em><strong>Creando mi propio camino</strong></em></p>
@@ -76,7 +76,7 @@
 					</div>
 				   	<div class="col s12">
 						<svg height="100" width="100" viewBox="0 0 100 100">
-						  <a href="z-depth-5"><image class="" xlink:href="img/66.svg"/></a>
+						  <a href=""><image class="" xlink:href="img/66.svg"/></a>
 					    </svg>
 					</div>
 				   </div>
@@ -103,6 +103,28 @@
 					 	<div class="chip mt"> peñol-antioquia-colombia<em class="material-icons">location_on</em></div>
 					 	<p class="texto"> El municipio de Guatapé se localiza a 79 km. de la ciudad de Medellín en el oriente Antioqueño, destino turístico con sus atractivos: Peñón de Guatapé, mole de piedra con 220 m. De altura que para ascenderla se requiere superar más de 700 escalas; Embalse Peñol Guatapé, con 2.262 hectáreas de tierra inundadas para dar paso a una de las hidroeléctricas más  importantes del país; Grabados en los Zócalos de las fachadas de las residencias y demás edificaciones representando tradiciones y colorido. Viva esta experiencia con Turismo en Medellín. </p>
 				     </div>
+				<form class="col s12 #1e88e5 blue darken-1 z-depth-5">
+				  <div class="row">
+					<div class="input-field col s6"><i class="material-icons prefix">account_circle</i>
+					  <input id="icon_prefix" type="text" class="validate">
+					  <label for="icon_prefix" >Nombre completo</label>
+					</div>
+					<div class="input-field col s6">
+					  <i class="material-icons prefix">email</i>
+					  <input id="icon_email" type="tel" class="validate">
+					  <label for="icon_email">Email</label>
+					</div>
+					  <div class="input-field col s12">
+						  <i class="material-icons prefix">comment</i>
+						  <textarea id="textarea1" class="materialize-textarea"></textarea>
+						  <label for="textarea1">Escribe tu comentario</label>
+					  </div>
+					    <div class="col s12 right-align "><button class="btn waves-effect waves-light #1565c0 blue darken-3" type="submit" name="action">enviar
+							<i class="material-icons right" >send</i></button>
+					   </div>
+				  </div>
+				</form>
+				
 				 </div>
 			 </div>
 			<div class="col s12 m4">
