--- a/blog-turismo/materialize/index.html
+++ b/blog-turismo/materialize/index.html
@@ -127,7 +127,16 @@
 				
 				 </div>
 			 </div>
-			<div class="col s12 m4">
+			<div class="col s12 m4 ">
+				<div class="row #fafafa grey lighten-5 center-align">
+					<div class="col s12"><img src="img/autor.jpg" alt="" class="circle responsive-img" ></div>
+					<div class="col s12"><h4 class=" ">Perfil del autor</h4><hr></div>
+					<div class="col s12 flow-text"><p>nos gusta viajar porque nos proporciona sensaciones indescriptibles, como subir en un autobús y no saber en qué parada debemos bajar, mirar un mapa y no saber hacia donde ir, confiar en alguien a quien hemos conocido el día anterior, encontrar un camino y seguirlo a pesar de no saber a dónde va, dejar que el azar marque el próximo punto de nuestra ruta...</p>
+
+<p>Por eso ahora, que se cumple un año desde que regresamos de nuestra tercera vuelta al mundo y por lo tanto hace un año que no viajamos, notamos que hay algo dentro de nosotros que nos impide estar más tiempo sin movernos.
+</p></div>
+				</div>
+				
 			</div>
 		  </div>
 			
